--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "socektssl"
-version = "1.1.0"
+name = "socketssl"
 license = {file = "LICENSE"}
 requires-python = ">= 3.12"
 description = "Sockets Streamlined: A wrapper around the python socket library for easy setup and use."
@@ -26,3 +25,7 @@ classifiers = [
 dependencies = [
   "pydantic"
 ]
+dynamic = ["version"]
+
+[tool.setuptools.dynamic]
+version = {attr = "socketssl.__version__"}
